# neohaskell-starter

./: .gitignore  README.md  cabal.project  devenv.nix  neohaskell-playground.cabal
app/: Main.hs
src/: Playground.hs
